# auth_microservice

./: .env  .gitignore  auth.db  main.py  pyproject.toml  requirements.txt
api_gateway/: main.py
app/api/: deps.py
app/api/v1/: auth.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: users.py
app/schemas/: users.py
app/services/: auth_service.py
